crates/wdl-analysis/tests/validation/wdl-1-4-symbolic-import-with-flag/source.errors
error: `openwdl/csvkit` is not a declared dependency
  ┌─ tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl:3:8
  │
3 │ import openwdl/csvkit
  │        ^^^^^^^^^^^^^^

error: `openwdl/csvkit` is not a declared dependency
  ┌─ tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl:4:15
  │
4 │ import * from openwdl/csvkit
  │               ^^^^^^^^^^^^^^

error: `openwdl/csvkit` is not a declared dependency
  ┌─ tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl:5:22
  │
5 │ import { sort } from openwdl/csvkit
  │                      ^^^^^^^^^^^^^^

